jellyfin_stack/sonarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8989
  selector:
    app: sonarr
