jellyfin_stack/sonarr/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: jellyfin

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sonarr.home.sparhomelab.dev`)
    kind: Rule
    services:
    - name: sonarr
      port: 80
    middlewares:
    - name: default-headers-jellyfin
  tls:
    secretName: sonarr-tls
